--- a/home.html
+++ b/home.html
@@ -20,7 +20,10 @@
     <nav>
         <div class="navbar">
             <div class="navbar-items-wrapper">
-                <i class="ri-menu-2-line" style="font-size: 2rem;"></i>
+                <button popovertarget="dropdown-menu" id="hamburger">
+                    <i class="ri-menu-2-line" style="font-size: 2rem;"></i>
+                </button>
+
                 <a class="logo" href="home.html">
                     <img src="https://citrus-v2.pages.dev/assets/logo-292df980.png" alt="logo">
                 </a>
