--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Allura&family=Cinzel:wght@400;600;700&family=EB+Garamond:ital@1&family=Inspiration&family=Onest:wght@100;500&family=Poppins:wght@100;300;400;800&family=Qwigley&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;800&display=swap" rel="stylesheet">
 
     <script src="https://cdn.lordicon.com/lordicon-1.1.0.js"></script>
 
@@ -20,7 +20,7 @@
     <nav>
         <div class="navbar">
             <div class="navbar-items-wrapper">
-                <button popovertarget="dropdown-menu" id="hamburger">
+                <button id="hamburger">
                     <i class="ri-menu-2-line" style="font-size: 2rem;"></i>
                 </button>
 
