--- a/sign-up.html
+++ b/sign-up.html
@@ -32,7 +32,7 @@
                     <p>Name</p>
                     <input type="text">
                     <p>Email</p>
-                    <input type="text">
+                    <input type="text" id="email">
                     <p>Password</p>
                     <input type="text">
                     
@@ -41,7 +41,7 @@
                         <p>Agree to Citrus' <a href="#">Terms of Service</a> and <a href="#">Privacy Policy</a></p>
                     </span>
         
-                    <a href="signed-up.html">
+                    <a id="link">
                         <button>Create Account</button>
                     </a>
                 </div>
@@ -54,5 +54,6 @@
         <h5>Citrus</h5>
         <p>© 2022-23 Aloofist. | All rights reserved.</p>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
