--- a/sign-up.html
+++ b/sign-up.html
@@ -34,7 +34,7 @@
                     <p>Email</p>
                     <input type="text" id="email">
                     <p>Password</p>
-                    <input type="text">
+                    <input type="text" id="password">
                     
                     <span>
                         <input type="checkbox">
