--- a/sign-up.html
+++ b/sign-up.html
@@ -12,6 +12,7 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="https://citrus-v2.pages.dev/assets/logo-292df980.png">
 </head>
 <body>
     <nav>
@@ -30,7 +31,7 @@
                     <h1>Create your Citrus account</h1>
         
                     <p>Name</p>
-                    <input type="text">
+                    <input type="text" id="name">
                     <p>Email</p>
                     <input type="text" id="email">
                     <p>Password</p>
