sign out button

--- a/signed-up.html
+++ b/signed-up.html
@@ -28,6 +28,9 @@
             <div class="card">
                 <h1>Whats up</h1>
                 <h1 id="user-el">Jacob</h1>
+                <a href="home.html">
+                    <button id="sign-out">Sign Out?</button>
+                </a>
             </div>
         </div>
     </main>
