--- a/signed-up.html
+++ b/signed-up.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Welcome to Citrus</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,7 +17,7 @@
 <body>
     <nav>
         <div class="navbar">
-            <a href="home.html">
+            <a href="index.html">
                 <img src="https://citrus-v2.pages.dev/assets/logo-292df980.png" alt="logo">
             </a>
         </div>
@@ -28,7 +28,7 @@
             <div class="card">
                 <h1>Whats up</h1>
                 <h1 id="user-el">Jacob</h1>
-                <a href="home.html">
+                <a href="index.html">
                     <button id="sign-out">Sign Out?</button>
                 </a>
             </div>
