--- a/signed-up.html
+++ b/signed-up.html
@@ -37,7 +37,7 @@
     <footer>
         <img src="https://citrus-v2.pages.dev/assets/logo-292df980.png" alt="logo">
         <h5>Citrus</h5>
-        <p>© 2022-23 Aloofist. | All rights reserved.</p>
+        <p>© 2023 Aloofist. | All rights reserved.</p>
     </footer>
     <script src="signed-up.js"></script>
 </body>
