--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <footer>
         <img src="https://citrus-v2.pages.dev/assets/logo-292df980.png" alt="logo">
         <h5>Citrus 2.0</h5>
-        <p>© 2022-23 Aloofist. | All rights reserved.</p>
+        <p>© 2023 Aloofist. | All rights reserved.</p>
     </footer>
 </body>
 </html>
